I added a height of 100vh to the body to hopefully fix the bg image issue on mobile. I fucking doubt it will work.

--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -21,7 +21,7 @@ html, body{
 
 
 body{
-	//height: 100%;
+	height: 100vh;
 	background-image: url("../../assets/citra.png");
 	background-size: cover;
 	background-position: center;
